--- a/2DMapEditor/MainWindow.xaml
+++ b/2DMapEditor/MainWindow.xaml
@@ -6,41 +6,54 @@
         xmlns:local="clr-namespace:_2DMapEditor"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="20"/>
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
-		<Grid Name="Menu" Grid.Row="0">
-			<Menu>
-				<MenuItem Header="ファイル(_F)">
-					<MenuItem Header="新規作成(N)"/>
-					<MenuItem Header="開く(O)" Click="OpenFile_Click"/>
-					<MenuItem Header="保存(S)" Click="SaveFile_Click"/>
-				</MenuItem>
-				<MenuItem Header="書き出し"/>
-			</Menu>
-		</Grid>
-		<Grid Name="Main" Grid.Row="1">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="7*"/>
-				<ColumnDefinition Width="3*"/>
-			</Grid.ColumnDefinitions>
-			<Grid Name="MapView" Grid.Column="0">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="20"/>
-					<RowDefinition Height="*"/>
-				</Grid.RowDefinitions>
-				<Grid Name="MainTab" Grid.Row="0">
-					
-				</Grid>
-				<Grid Name="MainDrawArea" Grid.Row="1">
-					
-				</Grid>
-			</Grid>
-			<Grid Name="SubView" Grid.Column="1">
-				
-			</Grid>
-		</Grid>
-	</Grid>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Name="Menu" Grid.Row="0">
+            <Menu>
+                <MenuItem Header="ファイル(_F)">
+                    <MenuItem Header="新規作成(N)"/>
+                    <MenuItem Header="開く(O)" Click="OpenFile_Click"/>
+                    <MenuItem Header="保存(S)" Click="SaveFile_Click"/>
+                </MenuItem>
+                <MenuItem Header="書き出し"/>
+                <MenuItem Header="MapTip作成" Click="CreateMapTip_Click"/>
+                <MenuItem Header="M追加" Click="MenuItem_Click"/>
+            </Menu>
+        </Grid>
+        <Grid Name="Main" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="7*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Name="MapView" Grid.Column="0">
+                <TabControl Name ="LayerTab"/>
+            </Grid>
+            <Grid Name="SubView" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="7*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <ScrollViewer Grid.Row="0" Grid.Column="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <UniformGrid Name="MapTipGrid" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                </ScrollViewer>
+                <Grid Name="LayerSub" Grid.Row="1" HorizontalAlignment="Center">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <Button Content="←" Width="15" Height="15" Background="White" BorderBrush="Black" Click="LeftButton_Click"/>
+                            <Label Name="ActiveLayer" Width="30" Height="30" BorderBrush="Black" Background="WhiteSmoke"/>
+                            <Button Content="→" Width="15" Height="15" Background="White" BorderBrush="Black" Click="RightButton_Click"/>
+                        </StackPanel>
+                      
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+                            <Button Content="追加" Width="40" Height="20" Margin="0,0,10,0" Click="CleateLayer_Click"/>
+                            <Button Content="削除" Width="40" Height="20" Margin="10,0,0,0"/>
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+        </Grid>
+    </Grid>
 </Window>
