--- a/2DMapEditor/StartDialog.xaml
+++ b/2DMapEditor/StartDialog.xaml
@@ -25,7 +25,7 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Column="1">
-            <Button Content="Map読込" FontSize="20" Width="100" Height="30"></Button>
+            <Button Content="Map読込" FontSize="20" Width="100" Height="30" Click="ReadButton_Click"></Button>
         </Grid>
     </Grid>
 </Window>
