--- a/2DMapEditor/TabNameSelect.xaml
+++ b/2DMapEditor/TabNameSelect.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_2DMapEditor"
         mc:Ignorable="d"
-        Title="TabNameSelect" Height="200" Width="400">
+        Title="TabNameSelect" Height="200" Width="400" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
